--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -14,6 +14,7 @@
     </p>
 
     <!-- QR Code box -->
+    <script src="{{static}}/js/qrcode/qr-code.js"></script>
     <div id="content-qrcode" class="d-flex justify-content-center mb-4">
       <div id="content-qrcode-payload" class="p-4 bg-white shadow-sm rounded">
         <qr-code
