feat: update UI qr code templates, fix translation and set title bold in html instead json configuration

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -89,7 +89,7 @@
       }
 
       function updateTexts(t) {
-        $('#content-title').html(t('contentTitle'));
+        $('#content-title').html('<b>' + t('contentTitle') + '</b>');
         $('#content-qrcode-info-text').html(
             t('qrCodeValidInfo', {seconds: `${expirationTime}`})
         );
