feat: update UI qr code templates, handle error page

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -148,9 +148,10 @@
 
       function errorPage(t) {
         clearInterval(countdown);
-        changeTitle(t('failureTitle'));
-        changeText(t('failureText'));
+        changeTitle(i18next.t('failureTitle'));
         changeQrCodeImg(crossImg);
+        changeQrCodeInfo(i18next.t('failureText'));
+        changeText('');
         $('#content-function').html(`
           <button class="btn btn-outline-primary" onclick="window.location.reload(true)">
             ${t('retryLabel')}
