feat: update UI qr code templates, add contact support hyperlink on error page

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -158,9 +158,13 @@
           <button class="btn btn-outline-primary" style="background-color: #0072CE; color: white;" onclick="window.location.reload(true)">
             ${t('retryLabel')}
           </button>
+          <br>
+          <br>
+          <a href="#" onclick="return false;" class="mt-2 d-block" style="color: #0072CE;">
+            ${t('contactSupportLabel')}
+          </a>
         `);
       }
-
       function changeTitle(str) {
         $('#content-title').html(str);
       }
