feat: update UI templates, add i18n for login_logo (view: 220#discussion_r2387516591)

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -90,6 +90,9 @@
       }
 
       function updateTexts(t) {
+        // headers
+        $('#wallet-title').html(t('login_logo'));
+        // content
         $('#content-title').html('<b>' + t('contentTitle') + '</b>');
         $('#content-qrcode-info-text').html(
             t('qrCodeValidInfo', {seconds: `${expirationTime}`})
