feat: update UI templates, add i18n for footer (view: 220#discussion_r2387517545)

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -99,6 +99,10 @@
         );
         $('#content-text').html(t('supportText'));
         $('#btn-back').text(t('backLabel'));
+        // footer
+        $('#footer-legal').html(t('footer.legal_notice'));
+        $('#footer-privacy').html(t('footer.privacy_policy'));
+        $('#footer-accessibility').html(t('footer.accessibility_statement'));
       }
 
       function StartQRcodeScanCheck(t) {
