feat: update UI templates, set page_title (view: 220#discussion_r2388081522)

--- a/iam-proxy-italia-project/templates/qr_code.html
+++ b/iam-proxy-italia-project/templates/qr_code.html
@@ -127,6 +127,8 @@
       }
 
       function updateTexts(t) {
+        // meta
+        $('#tab-title').html(t('page_title'));
         // headers
         $('#wallet-title').html(t('login_logo'));
         // content
